WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220518
Crash in pageDidComputePageRects()
https://bugs.webkit.org/show_bug.cgi?id=220518
Summary
Crash in pageDidComputePageRects()
Kate Cheney
Reported
2021-01-11 11:38:20 PST
auto *printInfo = [view->_printOperation printInfo] in WKPrintingView.mm is causing a crash.
Attachments
Patch
(13.77 KB, patch)
2021-01-11 11:56 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-01-11 11:38:40 PST
rdar://problem/71065870
Kate Cheney
Comment 2
2021-01-11 11:56:08 PST
Created
attachment 417395
[details]
Patch
EWS
Comment 3
2021-01-11 15:54:32 PST
Committed
r271384
: <
https://trac.webkit.org/changeset/271384
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417395
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug