Source/WebKit/UIProcess/mac/WKPrintingView.h
@@ -44,7 +44,7 @@ class WebFrameProxy;
 
 @interface WKPrintingView : NSView {
 @public
-    NSPrintOperation *_printOperation; // WKPrintingView is owned by the operation.
+    WeakObjCPtr<NSPrintOperation> _printOperation;
     RetainPtr<NSView> _wkView;
 
     RefPtr<WebKit::WebFrameProxy> _webFrame;
